--- a/index.html
+++ b/index.html
@@ -9,367 +9,26 @@
 	<span>Medium</span>
 	<span>1:22</span>
 	</h2>
+
 	<table class="sudoku-table">
-        <tr>
-            <td>
-                <table>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                </table>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <table>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                </tr>
-                </table>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <table>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell  ">
-                        <input type="text" maxlength="1" value="1"/>
-                    </td>
-                    <td class="sudoku-cell sudoku-cell-blocked">
-                        <input type="text" maxlength="1" value="1" readonly/>
-                    </td>
-                </tr>
-                </table>
-            </td>
-        </tr>
+
 	</table>
 	<div class="button-container">
-		<button class="bg-white">Easy</button>
-		<button class="bg-yellow">Medium</button>
-		<button class="bg-red">Hard</button>
-		<button class="bg-green">Solve</button>
+		<button id="easy" class="bg-white">Easy</button>
+		<button id="medium" class="bg-yellow">Medium</button>
+		<button id="hard" class="bg-red">Hard</button>
+		<button id="solve" class="bg-green">Solve</button>
 	</div>
-    <div id="help" class="bg-white" style="-webkit-user-select: all;
-    -khtml-user-select: all;
-    -moz-user-select: all;
-    -ms-user-select: all;
-    user-select: all;"></div>
 </div>
 <script type="text/javascript" src="scripts/lib/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="scripts/arrayExtensions.js"></script>
 <script type="text/javascript" src="scripts/cell/cell.js"></script>
 <script type="text/javascript" src="scripts/cell/cellsMapper.js"></script>
 <script type="text/javascript" src="scripts/board/board.js"></script>
-<script type="text/javascript" src="scripts/board/boardContainer.js"></script>
 <script type="text/javascript" src="scripts/board/boardSolver.js"></script>
+<script type="text/javascript" src="scripts/board/boardDifficulty.js"></script>    
 <script type="text/javascript" src="scripts/board/boardGenerator.js"></script>
+<script type="text/javascript" src="scripts/game/boardBuilder.js"></script>
 <script type="text/javascript" src="scripts/main.js"></script>
 </body>
 </html>
